...
        }
    }

    val openCreateDialog = remember { mutableStateOf(false) }
    Scaffold(
        topBar = {
            TopAppBar(title = { Text("Профиль") })
        }
    ) { innerPadding ->
        Box(
            modifier = Modifier
                .fillMaxSize()
                .padding(innerPadding)
...
                onOptionSelected = { profile ->
                    vm.onAction(SelectProfile(profile))
                }
            )
            Icon(
                imageVector = Icons.Filled.PersonAddAlt,
                contentDescription = "Add",
                tint = MaterialTheme.colors.primary,
                modifier = Modifier
                    .align(Alignment.BottomEnd)
                    .size(90.dp)
                    .padding(16.dp)
                    .clickable {
...
